[gd_scene load_steps=4 format=3 uid="uid://beex0paj73cv5"]

[ext_resource type="Script" path="res://Scripts/GeoffScripts/AtticRedo/AtticManagerAgain.gd" id="1_woab1"]
[ext_resource type="FontFile" uid="uid://cjgtqv4nsp8pj" path="res://ascii-sector-16x16-tileset.ttf" id="2_6jj5o"]
[ext_resource type="Texture2D" uid="uid://bdhrfskm2irck" path="res://icon.svg" id="3_7y2mm"]

[node name="AtticRedo" type="Node2D"]

[node name="AtticManager" type="Node" parent="."]
script = ExtResource("1_woab1")

[node name="HBoxContainer" type="HBoxContainer" parent="AtticManager"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -517.0
offset_top = 199.0
offset_right = -542.0
offset_bottom = -331.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 100

[node name="Button" type="Button" parent="AtticManager/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_6jj5o")
theme_override_font_sizes/font_size = 32
text = "Pile One"

[node name="Button2" type="Button" parent="AtticManager/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_6jj5o")
theme_override_font_sizes/font_size = 32
text = "Pile Two"

[node name="Button3" type="Button" parent="AtticManager/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_6jj5o")
theme_override_font_sizes/font_size = 32
text = "Pile Three"

[node name="Label" type="Label" parent="AtticManager"]
offset_left = 238.0
offset_top = -306.0
offset_right = 558.0
offset_bottom = -274.0
theme_override_fonts/font = ExtResource("2_6jj5o")
theme_override_font_sizes/font_size = 32
text = "Moves: XXX"

[node name="Box_1" type="Sprite2D" parent="AtticManager"]
position = Vector2(-385, -261)
scale = Vector2(0.75, 0.75)
texture = ExtResource("3_7y2mm")

[node name="Box_2" type="Sprite2D" parent="AtticManager"]
position = Vector2(-385, -160)
scale = Vector2(0.75, 0.75)
texture = ExtResource("3_7y2mm")

[node name="Box_3" type="Sprite2D" parent="AtticManager"]
position = Vector2(-391, -60)
scale = Vector2(0.75, 0.75)
texture = ExtResource("3_7y2mm")

[node name="Box_4" type="Sprite2D" parent="AtticManager"]
position = Vector2(-391, 40)
scale = Vector2(0.75, 0.75)
texture = ExtResource("3_7y2mm")

[node name="Box_5" type="Sprite2D" parent="AtticManager"]
position = Vector2(-390, 139)
scale = Vector2(0.75, 0.75)
texture = ExtResource("3_7y2mm")

[node name="Camera2D" type="Camera2D" parent="."]

[connection signal="pressed" from="AtticManager/HBoxContainer/Button" to="AtticManager" method="_on_button_1_pressed"]
[connection signal="pressed" from="AtticManager/HBoxContainer/Button2" to="AtticManager" method="_on_button_2_pressed"]
[connection signal="pressed" from="AtticManager/HBoxContainer/Button3" to="AtticManager" method="_on_button_3_pressed"]
